# Mutiplium-Research-Agent

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE_V2.md  BEFORE_AFTER_COMPARISON.md  BUGFIX_SUBPROCESS_HANDLE.md  CLAUDE_CACHE_TEST_RESULTS.md  COST_OPTIMIZATION.md  DEEP_RESEARCH_GUIDE.md  DEPLOYMENT.md  DISCOVERY_ENHANCEMENTS_COMPLETE.md  EXECUTIVE_SUMMARY.md  FINAL_ARCHITECTURE_SUMMARY.md  FREE_API_ALTERNATIVES.md  FULL_RUN_ANALYSIS_20251101.md  FULL_RUN_CONFIG.md  FULL_RUN_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LAUNCH_READY.md  NEXT_STEPS.md  OPTIMIZATION_SUMMARY.md  PROJECT_CONTEXT.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  RENDER_DEPLOYMENT.md  RUN_TEST_NOW.sh  STATUS_PAUSE_HERE.md  SUCCESS_REPORT.md  SYSTEM_STATUS_FINAL.md  YOUR_TODO_LIST.md  design.json  json_to_csv.py  pyproject.toml  render.yaml  requirements.txt  seed_companies.json  session_context.md
config/: claude_test.yaml  dev.yaml  openai_gemini_test.yaml  openai_only.yaml  prod.yaml
dashboard/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.js  vite.config.ts
dashboard/src/: App.css  App.tsx  api.ts  main.tsx  types.ts  vite-env.d.ts
data/: kpis.md  projects.json  thesis.md  user_companies.json  value_chain.md
data/chats/: 1100630b6076.json  696ba2a993fd.json  8e99280b77ba.json  c3588f36e559.json  d133ff212799.json  e549d28fb3e5.json  proj_1765033928509_0beokkb50.json  (+1 more)
docs/: architecture.md  claude_agent_overview.html
reports/: .gitkeep  latest_report.json
scripts/: check_env.py  check_test_status.py  diagnose_companies.py  generate_reports.py  start_dashboard.sh  start_tool_servers.sh  stop_dashboard.sh  test_anthropic_websearch.py  test_api_keys.py  test_discovery.py  test_perplexity_mcp.py  test_tavily_google_keys.py  test_tavily_mcp.py  validate_all_systems.py  wait_for_test.sh
servers/: academic_search_service.py  app.py  common.py  crunchbase_service.py  esg_service.py  financials_service.py  patents_service.py  requirements.txt  research_dashboard.py  search_service.py  sustainability_service.py
tests/: test_financial_enricher.py  test_openai_provider.py  test_orchestrator.py  test_provider_factory.py  test_search_perplexity.py  test_search_providers.py  test_tool_manager.py
(+183 files in other folders)
