[project]
name = "multiplium"
version = "0.1.0"
description = "Deep research orchestration platform leveraging multi-provider LLM agent SDKs."
authors = [{ name = "Multiplium Engineering" }]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "structlog>=24.1",
    "pandas>=2.2",
    "anthropic>=0.29",
    "openai>=1.0",            # For xAI provider
    "openai-agents>=0.6.1",   # Latest with web search, MCP support
    "google-genai>=1.46",    # Latest SDK with Gemini 3 Pro support
    "httpx>=0.27",
    "aiohttp>=3.9",
    "tenacity>=8.4",
    "pyyaml>=6.0",
    "uvicorn>=0.30",          # For tool servers
    "fastapi>=0.110",         # For tool servers
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pyyaml",
    "types-requests",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
